NOBUG: Replace pseudo-functional style using IntelliJ