@@ -3,7 +3,6 @@ package com.indeed.proctor.store.utils.test;
 import com.google.common.base.Function;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Throwables;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.indeed.proctor.common.model.TestDefinition;
@@ -29,6 +28,7 @@ import java.util.concurrent.Callable;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
+import java.util.stream.Collectors;
 
 /**
  * This class is an in-memory implementation of ProctorStore.
@@ -319,7 +319,7 @@ public class InMemoryProctorStore implements ProctorStore {
     }
 
     private static List<Revision> castToRevisionList(final List<RevisionAndTest> list) {
-        return Lists.transform(list, castToRevision);
+        return list.stream().map(castToRevision::apply).collect(Collectors.toList());
     }
 
     private static final Function<RevisionAndTest, Revision> castToRevision = new Function<RevisionAndTest, Revision>() {
@@ -331,10 +331,10 @@ public class InMemoryProctorStore implements ProctorStore {
     };
 
     private static List<Revision> filterRevisionByTest(final List<RevisionAndTest> revisionHistory, final String test) {
-        return FluentIterable.from(revisionHistory)
+        return revisionHistory.stream()
                 .filter(revisionAndTest -> revisionAndTest.getTestName().equals(test))
-                .transform(castToRevision)
-                .toList();
+                .map(castToRevision::apply)
+                .collect(Collectors.toList());
     }
 
     /**
